# Cirrina-Examples

./: .gitignore  README.md  big.Vagrantfile  chameneos.Vagrantfile  cigaretteSmokers.Vagrantfile  count.Vagrantfile  diningPhilosophers.Vagrantfile  pyproject.toml  sleepingBarber.Vagrantfile
benchmark/: main.pkl  services.pkl  stateMachineOne.pkl  stateMachineTwo.pkl
big/: big.pkl  compose.yml  defs.pkl  docker-compose.yml  main.pkl  sink.pkl
chameneos/: chameneos.pkl  compose.yml  defs.pkl  main.pkl  mainMall.pkl  mall.pkl
cigarette/: arbiter.pkl  arbitrator.pkl  defs.pkl  main.pkl  smoker.pkl
cigaretteSmokers/: compose.yaml  main.pkl  mainArbiter.pkl  smoker.pkl
count/: compose.yml  counter.pkl  main.pkl  mainCounter.pkl  mainProducer.pkl  producer.pkl
diningPhilosophers/: .gitignore  Vagrantfile  compose.yaml  deploy.py  main.pkl
philosophers/: arbitrator.pkl  compose.yaml  defs.pkl  main.pkl  mainArbitrator.pkl  philosopher.pkl  services.pkl
pingPong/: main.pkl  mainPing.pkl  mainPong.pkl  ping.pkl  pong.pkl  services.pkl
pingpong/: main.pkl  ping.pkl  pong.pkl
railway-crossing/: .gitignore  PklProject  README.md  bell.pkl  compose.yaml  controller.pkl  crossing.pkl  docker-compose.yml  events.pkl  gate.pkl  light.pkl  main.pkl  persistent_variables.pkl  services.dev.pkl  services.pkl  telegraf.conf  vars.pkl
sleepingBarber/: barber.pkl  compose.yaml  customer.pkl  defs.pkl  main.pkl  mainBarber.pkl  mainManager.pkl  mainWaitingRoom.pkl  manager.pkl  services.pkl  waitingRoom.pkl
smartBuilding/: main.pkl
surveillance-system/: detector.pkl  (+4 more)
(+135 files in other folders)
