[project]
name = "cirrina-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Marlon Etheredge",email = "marlon.etheredge@uibk.ac.at"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.37.0,<0.38.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "nats-py (>=2.11.0,<3.0.0)",
    "opentelemetry-api (>=1.37.0,<2.0.0)",
    "opentelemetry-sdk (>=1.37.0,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.37.0,<2.0.0)",
    "protobuf (>=6.32.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
