[project]
name = "cirrina-examples"
version = "0.1.0"
description = ""
authors = [{ name = "Marlon Etheredge", email = "marlon.etheredge@uibk.ac.at" }]
readme = "README.md"
requires-python = "~3.13"
dependencies = ["enoslib (>=10.6.0,<11.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
