[project]
name = "cirrina-examples"
version = "0.1.0"
description = ""
authors = [{ name = "Marlon Etheredge", email = "marlon.etheredge@uibk.ac.at" }]
readme = "README.md"
requires-python = "~3.14"
dependencies = ["enoslib (>=10.6.0,<11.0.0)", "tqdm (>=4.67.3,<5.0.0)", "black (>=26.3.1,<27.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
